docs: Rearrange cells

--- a/neural_network/CNN.ipynb
+++ b/neural_network/CNN.ipynb
@@ -798,15 +798,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 835,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "strides = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 842,
    "metadata": {},
    "outputs": [
@@ -855,15 +846,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 796,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "strides = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 797,
    "metadata": {},
    "outputs": [
@@ -876,38 +858,18 @@
     }
    ],
    "source": [
-    "seed = 11\n",
-    "tf.random.set_seed(seed)\n",
+    "# seed = 11\n",
+    "# tf.random.set_seed(seed)\n",
     "\n",
-    "st = time.time()\n",
+    "# st = time.time()\n",
     "\n",
-    "model = Sequential()\n",
-    "model.add(Conv2DTranspose(n_filters, kernel_size, input_shape = image_size+(num_channels,), strides = strides, padding='valid', kernel_initializer = \n",
-    "                          tf.keras.initializers.GlorotNormal(seed=1) ) )\n",
-    "X1 = model(X)\n",
+    "# model = Sequential()\n",
+    "# model.add(Conv2DTranspose(n_filters, kernel_size, input_shape = image_size+(num_channels,), strides = strides, padding='valid', kernel_initializer = \n",
+    "#                           tf.keras.initializers.GlorotNormal(seed=1) ) )\n",
+    "# X1 = model(X)\n",
     "\n",
-    "et = time.time()\n",
-    "print('running time:', et-st)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 686,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TensorShape([16, 260, 260, 64])"
-      ]
-     },
-     "execution_count": 686,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X1.shape"
+    "# et = time.time()\n",
+    "# print('running time:', et-st)"
    ]
   },
   {
@@ -1049,26 +1011,6 @@
    ],
    "source": [
     "X1.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 845,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([ True]), array([67108864], dtype=int64))"
-      ]
-     },
-     "execution_count": 845,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.unique(np.isclose(result, X1,) , return_counts=True)"
    ]
   },
   {
