docs: Update the notebook for CNN

--- a/neural_network/CNN.ipynb
+++ b/neural_network/CNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
        "TensorShape([16, 256, 256, 5])"
       ]
      },
-     "execution_count": 372,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,23 +470,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 764,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "strides = 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 765,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 0.04082131385803223\n"
+      "running time: 0.046419382095336914\n"
      ]
     }
    ],
@@ -503,18 +494,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 766,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_57\"\n",
+      "Model: \"sequential_7\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_10 (Conv2D)          (None, 86, 86, 64)        8064      \n",
+      " conv2d_7 (Conv2D)           (None, 128, 128, 64)      8064      \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 8,064\n",
@@ -530,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 768,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,27 +530,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 769,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([5, 5, 5, 64])"
+       "(TensorShape([5, 5, 5, 64]), TensorShape([64]))"
       ]
      },
-     "execution_count": 769,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cnn.kernel.shape"
+    "cnn.kernel.shape, cnn.bias.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 770,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +566,7 @@
        "True"
       ]
      },
-     "execution_count": 770,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,23 +578,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 771,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape of feature map: (86, 86)\n"
+      "shape of feature map: (128, 128)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 771,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +603,7 @@
     "pad = 2 if cnn.padding == 'same' else 0\n",
     "\n",
     "print('shape of feature map:',cnn.output_shape[1:3])\n",
-    "cnn.output_shape[1:3] == (int((image_size[0] - kernel_size[0] + pad)/strides + 1), int((image_size[1] - kernel_size[1] + pad)/strides + 1))"
+    "cnn.output_shape[1:3] == (int((image_size[0] - kernel_size[0] + 2*pad)/strides + 1), int((image_size[1] - kernel_size[1] + 2*pad)/strides + 1))"
    ]
   },
   {
@@ -1431,7 +1422,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.5 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1448,6 +1439,11 @@
    "version": "3.8.5"
   },
   "toc-autonumbering": true,
+  "vscode": {
+   "interpreter": {
+    "hash": "11bf42a7d35dccb5062257f624789fbcfd98edcd66dea97425a1020d5290a8bb"
+   }
+  },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {},
