docs: Update the notebook for CNN

--- a/neural_network/CNN.ipynb
+++ b/neural_network/CNN.ipynb
@@ -615,14 +615,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 772,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 0.06569194793701172\n"
+      "running time: 0.13324642181396484\n"
      ]
     }
    ],
@@ -640,18 +640,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 773,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(TensorShape([16, 86, 86, 125]),\n",
+       "(TensorShape([16, 128, 128, 125]),\n",
        " TensorShape([125, 64]),\n",
-       " TensorShape([16, 86, 86, 64]))"
+       " TensorShape([16, 128, 128, 64]))"
       ]
      },
-     "execution_count": 773,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 780,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "True"
       ]
      },
-     "execution_count": 780,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,14 +689,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 782,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 0.06233692169189453\n"
+      "running time: 0.1844322681427002\n"
      ]
     }
    ],
@@ -715,16 +715,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 783,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([16, 86, 86, 125])"
+       "TensorShape([16, 128, 128, 125])"
       ]
      },
-     "execution_count": 783,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 784,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +744,7 @@
        "True"
       ]
      },
-     "execution_count": 784,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,16 +769,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([16, 256, 256, 3])"
+       "TensorShape([16, 256, 256, 5])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,14 +789,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 842,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 1.2655184268951416\n"
+      "running time: 1.722233533859253\n"
      ]
     }
    ],
@@ -817,16 +817,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 837,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([16, 256, 256, 64])"
+       "TensorShape([16, 512, 512, 64])"
       ]
      },
-     "execution_count": 837,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,17 +837,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 797,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "running time: 1.5569891929626465\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# seed = 11\n",
     "# tf.random.set_seed(seed)\n",
@@ -865,19 +857,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 838,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_60\"\n",
+      "Model: \"sequential_9\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_transpose_49 (Conv2D  (None, 256, 256, 64)     8064      \n",
-      " Transpose)                                                      \n",
+      " conv2d_transpose_1 (Conv2DT  (None, 512, 512, 64)     8064      \n",
+      " ranspose)                                                       \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 8,064\n",
@@ -893,15 +885,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 843,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(16, 256, 256, 5)\n",
-      "running time: 0.5162489414215088\n"
+      "(16, 512, 512, 5)\n",
+      "running time: 1.995366096496582\n"
      ]
     }
    ],
@@ -946,16 +938,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 806,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([5, 5, 5, 64])"
+       "TensorShape([5, 5, 64, 5])"
       ]
      },
-     "execution_count": 806,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,16 +958,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 799,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([16, 260, 260, 64])"
+       "TensorShape([16, 512, 512, 64])"
       ]
      },
-     "execution_count": 799,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -986,16 +978,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 800,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([16, 260, 260, 64])"
+       "TensorShape([16, 512, 512, 64])"
       ]
      },
-     "execution_count": 800,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 846,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1007,7 @@
        "True"
       ]
      },
-     "execution_count": 846,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,14 +1037,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 0.060999393463134766\n"
+      "running time: 0.05241274833679199\n"
      ]
     }
    ],
@@ -1069,16 +1061,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([64, 127, 127, 7])"
+       "TensorShape([16, 126, 126, 5])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,23 +1081,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_4\"\n",
+      "Model: \"sequential_10\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " depthwise_conv2d_2 (Depthwi  (None, 127, 127, 7)      70        \n",
-      " seConv2D)                                                       \n",
+      " depthwise_conv2d (Depthwise  (None, 126, 126, 5)      130       \n",
+      " Conv2D)                                                         \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 70\n",
-      "Trainable params: 70\n",
+      "Total params: 130\n",
+      "Trainable params: 130\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -1117,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,16 +1118,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([3, 3, 7, 1])"
+       "TensorShape([5, 5, 5, 1])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,14 +1138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 0.4218616485595703\n"
+      "running time: 0.40724730491638184\n"
      ]
     }
    ],
@@ -1173,18 +1165,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(TensorShape([64, 127, 127, 3, 3, 7]),\n",
-       " TensorShape([3, 3, 7]),\n",
-       " TensorShape([64, 127, 127, 7]))"
+       "(TensorShape([16, 126, 126, 5, 5, 5]),\n",
+       " TensorShape([5, 5, 5]),\n",
+       " TensorShape([16, 126, 126, 5]))"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1197,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1198,7 @@
        "True"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1231,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1244,23 +1236,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_5\"\n",
+      "Model: \"sequential_11\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " separable_conv2d (Separable  (None, 127, 127, 64)     575       \n",
+      " separable_conv2d (Separable  (None, 126, 126, 64)     509       \n",
       " Conv2D)                                                         \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 575\n",
-      "Trainable params: 575\n",
+      "Total params: 509\n",
+      "Trainable params: 509\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -1272,16 +1264,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([64, 127, 127, 7])"
+       "TensorShape([16, 126, 126, 5])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1292,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1301,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1324,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1333,7 +1325,7 @@
        "True"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1345,7 @@
        "True"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1364,25 +1356,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_6\"\n",
+      "Model: \"sequential_12\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " depthwise_conv2d_3 (Depthwi  (None, 127, 127, 7)      63        \n",
+      " depthwise_conv2d_1 (Depthwi  (None, 126, 126, 5)      125       \n",
       " seConv2D)                                                       \n",
       "                                                                 \n",
-      " conv2d_2 (Conv2D)           (None, 127, 127, 64)      512       \n",
+      " conv2d_8 (Conv2D)           (None, 126, 126, 64)      384       \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 575\n",
-      "Trainable params: 575\n",
+      "Total params: 509\n",
+      "Trainable params: 509\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -1394,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -1403,7 +1395,7 @@
        "True"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
