--- a/machine_learning/nDCG.ipynb
+++ b/machine_learning/nDCG.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,14 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "num_samples = 5\n",
+    "num_items = 7\n",
+    "\n",
     "rng = np.random.default_rng(42)\n",
-    "y_true = rng.integers(1,5,10).reshape(2,-1)\n",
+    "y_true = rng.integers(1,5, (num_samples, num_items))\n",
+    "\n",
     "rng = np.random.default_rng(44)\n",
-    "y_score = rng.integers(1,5,10).reshape(2,-1)"
+    "y_score = rng.integers(1,5, (num_samples, num_items))"
    ]
   },
   {
@@ -44,13 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dcg_array_ignore_ties(y_true, y_score, k=None, log_base=2):\n",
     "    discount = 1 / (np.log(np.arange(y_true.shape[1]) + 2) / np.log(log_base))\n",
-    "    if dcg_k is not None:\n",
+    "    if k is not None:\n",
     "        discount[k:] = 0\n",
     "        \n",
     "    ranking = np.argsort(y_score)[:, ::-1]\n",
@@ -67,7 +71,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 8.94781187, 10.77283194,  9.90113586, 10.92878593,  8.45482712])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dcg_array_ignore_ties(y_true, y_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +100,7 @@
        "True"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +127,7 @@
        "True"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +167,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.5 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -158,6 +182,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "11bf42a7d35dccb5062257f624789fbcfd98edcd66dea97425a1020d5290a8bb"
+   }
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
